--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ description: ''
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
 url: 'adityabalu.github.io'
-baseurl: 'iastate_trac'
+baseurl: '/iastate_trac'
 
 
 # Logo size is 600x80 pixels
