Better Front Page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -35,7 +35,7 @@
   url: "/Publications/"
   side: left
 
-- title: "Activities"
+- title: "Education & Outreach"
   url: "/Activities/"
   side: left
   dropdown:
