adding the known people

--- a/_data/people/co-PI.yml
+++ b/_data/people/co-PI.yml
@@ -1,5 +1,5 @@
 - name: Baskar Ganapathysubramanian
-  photo: ganapathysubramanian-baskar.png
+  photo: baskar.jpg
   webpage: https://www.me.iastate.edu/bglab/
   email: baskarg@iastate.edu
   description: Baskar Ganapathysubramanian is a Professor in the Department of Mechanical Engineering at Iowa State University. His research interests are in the areas of computational mechanics, multi-physics simulators, control algorithms, data-driven methods to efficiently model these systems. Whenever possible,they validate the techniques using the expertise of their experimental collaborators.
