1. updated workshop page 2. updated tutorials page and upcoming tutorial page and news 3. updated journal club schedule 4. updated seminar schedule 5. updated news items

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,9 @@
+- date: 22 April 2022
+  headline: Please join us in the TrAC Technical Workshop  on <a href="https://trac-ai.iastate.edu/Activities/workshops/SciML2022/"> "Scientific Machine Learning - Foundations and Applications " </a>
+- date: 18 April 2022
+  headline: CyVerse, TrAC and Jetstream2 launch the first workshop of cloud-based deep learning on NSF XSEDE’s next generation cloud infrastructure. <a href="https://trac-ai.iastate.edu/news/cyverse-trac-jetstream2-apr-2022/"> See more here </a>
+- date: 9 April 2022
+  headline: We are conducting a tutorial on Intro to Cloud-based Deep Learning
 - date: 1 March 2022
   headline: Our PI <a href="https://www.me.iastate.edu/bglab/"> Baskar Ganapathysubramanian </a> and  Data Scientist <a href="https://adityabalu.github.io/"> Aditya Balu </a> are organizing <a href="https://adam-aaai2022.github.io/"> AAAI 2022 Workshop on AI for Design and Manufacturing </a>.
 - date: 28 Feb 2022
