remove chmod from workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,6 +43,6 @@ jobs:
         fi
         echo "::set-output name=DEPLOY_BRANCH::pages-html"
     - name: Deploy website 
-      run:  yes | chmod +x bin/deploy; bin/deploy --verbose ${{ steps.setup.outputs.NO_PUSH }}
+      run:  yes | bin/deploy --verbose ${{ steps.setup.outputs.NO_PUSH }}
                     --src ${{ steps.setup.outputs.SRC_BRANCH }} 
                     --deploy ${{ steps.setup.outputs.DEPLOY_BRANCH }} 
