--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,11 +7,14 @@
   side: left
   dropdown:
     - title: "Leadership"
-      url: "/About/leadership/"
+      url: "/About/"
+#       url: "/About/leadership/"
     - title: "Faculty Experts"
-      url: "/About/experts/"
+      url: "/About/"
+#       url: "/About/experts/"
     - title: "Staff Members"
-      url: "/About/members/"
+      url: "/About/"
+#       url: "/About/members/"
     
 
 - title: "Research"
