pre-award and post-award added to navbar

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,18 +20,20 @@
   url: "/Research/"
   side: left
   dropdown:
-  - title: "AI Core"
-    url: "/Research/aicore/"
-  - title: "Materials, Design & Manufacturing"
-    url: "/Research/materialsdesign/"
-  - title: "Autonomy"
-    url: "/Research/autonomy/"
-  - title: "Food, Energy & Water"
-    url: "/Research/few/"
-  - title: "Ethics"
-    url: "/Research/ethics/"
-  - title: "Health & Quality of Life"
-    url: "/Research/hql/"
+    - title: "Thrust Areas"
+      url: "/Research/"
+    - title: "AI Core"
+      url: "/Research/aicore/"
+    - title: "Materials, Design & Manufacturing"
+      url: "/Research/materialsdesign/"
+    - title: "Autonomy"
+      url: "/Research/autonomy/"
+    - title: "Food, Energy & Water"
+      url: "/Research/few/"
+    - title: "Ethics"
+      url: "/Research/ethics/"
+    - title: "Health & Quality of Life"
+      url: "/Research/hql/"
 
 - title: "Industry Partners"
   url: "/Partners/"
@@ -58,8 +60,12 @@
   dropdown:
   - title: "Compute Resources"
     url: "/Resources/compute/"
-  - title: "How tos?"
-    url: "/Resources/howtos/"
+#  - title: "How tos?"
+#    url: "/Resources/howtos/"
+  - title: "Pre-Award Resources"
+    url: "/Resources/pre-award/"
+  - title: "Post-Award Resources"
+    url: "/Resources/post-award/"
   - title: "Openings and other opportunities"
     url: "/Resources/opportunities/"
 
