changed research section in navbar.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,27 +22,25 @@
   dropdown:
     - title: "Thrust Areas"
       url: "/Research/"
-    - title: "AI Core"
-      url: "/Research/aicore/"
-    - title: "Materials, Design & Manufacturing"
-      url: "/Research/materialsdesign/"
-    - title: "Autonomy"
-      url: "/Research/autonomy/"
-    - title: "Food, Energy & Water"
-      url: "/Research/few/"
-    - title: "Ethics"
-      url: "/Research/ethics/"
-    - title: "Health & Quality of Life"
-      url: "/Research/hql/"
+      dropdown:
+      - title: "AI Core"
+        url: "/Research/aicore/"
+      - title: "Materials, Design & Manufacturing"
+        url: "/Research/materialsdesign/"
+      - title: "Autonomy"
+        url: "/Research/autonomy/"
+      - title: "Food, Energy & Water"
+        url: "/Research/few/"
+      - title: "Ethics"
+        url: "/Research/ethics/"
+      - title: "Health & Quality of Life"
+        url: "/Research/hql/"
+    - title: "Research Products"
+      url: "/Research/products"
 
 - title: "Industry Partners"
   url: "/Partners/"
   side: left
-  dropdown:
-    - title: "John Deer"
-      url: "/Partners/JohnDeer"
-    - title: "Bayer"
-      url: "/Partners/Bayer"
 
 - title: "Projects"
   url: "/Projects/"
