mapped publications to research products

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,21 +22,20 @@
   dropdown:
     - title: "Thrust Areas"
       url: "/Research/"
-      dropdown:
-      - title: "AI Core"
-        url: "/Research/aicore/"
-      - title: "Materials, Design & Manufacturing"
-        url: "/Research/materialsdesign/"
-      - title: "Autonomy"
-        url: "/Research/autonomy/"
-      - title: "Food, Energy & Water"
-        url: "/Research/few/"
-      - title: "Ethics"
-        url: "/Research/ethics/"
-      - title: "Health & Quality of Life"
-        url: "/Research/hql/"
+#    - title: "AI Core"
+#      url: "/Research/aicore/"
+#    - title: "Materials, Design & Manufacturing"
+#      url: "/Research/materialsdesign/"
+#    - title: "Autonomy"
+#      url: "/Research/autonomy/"
+#    - title: "Food, Energy & Water"
+#      url: "/Research/few/"
+#    - title: "Ethics"
+#      url: "/Research/ethics/"
+#    - title: "Health & Quality of Life"
+#      url: "/Research/hql/"
     - title: "Research Products"
-      url: "/Research/products"
+      url: "/Publications/"
 
 - title: "Industry Partners"
   url: "/Partners/"
