Pre-Award and Post-Award resources

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -26,7 +26,7 @@
       url: "/Publications/"
 
 - title: "Industry Partners"
-  url: "/Partners/"
+  url: "/IndustryPartners/"
   side: left
 
 - title: "Projects"
