industry partners updated and reformatted

--- a/_data/industrypartners.yml
+++ b/_data/industrypartners.yml
@@ -3,5 +3,6 @@
   Website: https://www.deere.com/en/our-company/
   Logo: deere-logo-agriculture.svg
 - Name: Bayer
+  Description: Guided by our purpose “Science for a better life,” at Bayer we deliver breakthrough innovations in health care and agriculture. We contribute to a world in which diseases are not only treated but effectively prevented or cured, in which people can take better care of their own health needs, and in which enough agriculture products are produced while respecting our planet’s natural resources. That's because at Bayer, growth and sustainability go hand in hand. In short, we are working to make our vision “Health for all, hunger for none” a reality. Our strategy operationalizes our vision, as we look to achieve long-term profitable growth and make a positive contribution to society and the environment.
   Website: https://www.bayer.com/en/this-is-bayer
   Logo: bayer.svg
