new tutorial added.

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,5 @@
+- date: 28 April 2023
+  headline: Join us for a four-hour tutorial exploring current AI techniques and innovative approaches with the potential to reshape various domains  on <a href="https://trac-ai.iastate.edu/Activities/tutorials/demystifying-trending-ai-techniques-apr-2023/"> "Tutorial on Demystifying Trending AI Techniques" </a>
 - date: 22 April 2022
   headline: Please join us in the TrAC Technical Workshop  on <a href="https://trac-ai.iastate.edu/Activities/workshops/SciML2022/"> "Scientific Machine Learning - Foundations and Applications " </a>
 - date: 18 April 2022
